# OOP-Lab-Project

./: CMakeLists.txt  README.md
data/: hotel.db  schema.sql
include/database/: DatabaseManager.h
include/models/: Booking.h  Customer.h  DeluxeRoom.h  Invoice.h  PresidentRoom.h  Receptionist.h  Room.h  StandardRoom.h  User.h
include/patterns/: DiscountStrategy.h  MemberDiscount.h  NoDiscount.h  PricingContext.h  RoomFactory.h  SeasonalDiscount.h
include/repositories/: BookingRepository.h  CustomerRepository.h  ReceptionistRepository.h  RoomRepository.h
include/utils/: DateUtils.h  ValidationUtils.h
src/database/: DatabaseManager.cpp
src/patterns/: MemberDiscount.cpp  NoDiscount.cpp  PricingContext.cpp  RoomFactory.cpp  SeasonalDiscount.cpp
src/repositories/: BookingRepository.cpp  CustomerRepository.cpp  ReceptionistRepository.cpp  RoomRepository.cpp
tests/: utils_tests.cpp
views/: BookingView.cpp  BookingView.h  CustomerView.cpp  CustomerView.h  MainWindow.cpp  MainWindow.h  RoomView.cpp  RoomView.h
